fixed overflow issues

--- a/style.scss
+++ b/style.scss
@@ -199,9 +199,10 @@ body{
     bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
-    padding: 0 1rem;
+    padding: 0;
 
     button{
         display: inline-block;
